{
  "version": 4,
  "terraform_version": "0.12.2",
  "serial": 85,
  "lineage": "127abbcd-7da1-62ec-b6de-28533a1530dc",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-00709a7a6741d3c6d",
            "owner_id": "164366481040",
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "vpc_id": "vpc-00fb3aa53c4b90c0d"
          },
          "depends_on": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09c2a648a1d7ec114",
            "owner_id": "164366481040",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00709a7a6741d3c6d",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-00fb3aa53c4b90c0d"
          },
          "depends_on": [
            "aws_internet_gateway.demo",
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "demo",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ee86710ab7574de0",
            "route_table_id": "rtb-09c2a648a1d7ec114",
            "subnet_id": "subnet-0766797d432f388f4"
          },
          "depends_on": [
            "aws_route_table.demo",
            "aws_subnet.demo"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ddf01525302530a0",
            "route_table_id": "rtb-09c2a648a1d7ec114",
            "subnet_id": "subnet-0d2b90ec9cc71522c"
          },
          "depends_on": [
            "aws_route_table.demo",
            "aws_subnet.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-cluster",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:164366481040:security-group/sg-080c4b752c18aa449",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-080c4b752c18aa449",
            "ingress": [],
            "name": "terraform-eks-demo-cluster",
            "name_prefix": null,
            "owner_id": "164366481040",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform-eks-demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-00fb3aa53c4b90c0d"
          },
          "depends_on": [
            "aws_vpc.demo"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "demo-cluster-ingress-workstation-https",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "18.136.157.120/32"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-1446844574",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-080c4b752c18aa449",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "depends_on": [
            "aws_security_group.demo-cluster"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "demo",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:164366481040:subnet/subnet-0766797d432f388f4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0766797d432f388f4",
            "map_public_ip_on_launch": false,
            "owner_id": "164366481040",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-00fb3aa53c4b90c0d"
          },
          "depends_on": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:164366481040:subnet/subnet-0d2b90ec9cc71522c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d2b90ec9cc71522c",
            "map_public_ip_on_launch": false,
            "owner_id": "164366481040",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/eks-cluster": "shared"
            },
            "vpc_id": "vpc-00fb3aa53c4b90c0d"
          },
          "depends_on": [
            "aws_vpc.demo",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "demo",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:164366481040:vpc/vpc-00fb3aa53c4b90c0d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02b3500a318e32ca7",
            "default_route_table_id": "rtb-05feb6017ff469f3e",
            "default_security_group_id": "sg-016b175718a927832",
            "dhcp_options_id": "dopt-f3b53f8b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-00fb3aa53c4b90c0d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05feb6017ff469f3e",
            "owner_id": "164366481040",
            "tags": {
              "Name": "terraform-eks-demo-node",
              "kubernetes.io/cluster/eks-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}